--- a/Feedbacksystem/templates/pages/department_head_faculty_evaluations.html
+++ b/Feedbacksystem/templates/pages/department_head_faculty_evaluations.html
@@ -36,7 +36,7 @@
 <div class="row g-0 ">
     <div class="col-lg-2 col-md-3 col-sm-4 col-12 mb-1">
         <button type="button" class="btn btn-warning custom-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-          <i class="bi bi-pencil-square"></i> Filter Options
+          <i class="bi bi-funnel-fill"></i> Filter Options
         </button>
       </div>
       
@@ -48,7 +48,7 @@
           <option id="-average_rating" value="-average_rating">Average Rating: Descending</option>
         </select>
       </div>
-<div class="col-lg-4 col-md-2"><a href="{% url 'department_head_faculty_evaluations_csv' %}?{{ request.GET.urlencode }}" class="btn custom-btn"><i class="bi bi-file-earmark-excel-fill"></i>Export Data</a></div>
+<div class="col-lg-4 col-md-2"><a href="{% url 'department_head_faculty_evaluations_csv' teacher.pk %}?{{ request.GET.urlencode }}" class="btn custom-btn"><i class="bi bi-file-earmark-excel-fill"></i>Export Data</a></div>
 </div>
 <div class="table-responsive">
     <table class="table table-bordered mt-2 ">
