--- a/Feedbacksystem/templates/pages/peer_to_peer_individual_summary_report_pdf.html
+++ b/Feedbacksystem/templates/pages/peer_to_peer_individual_summary_report_pdf.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Summary List of SET Ratings</title>
+    <title>Summary List of Peer-to-Peer Ratings for {{faculty_name}} </title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -46,7 +46,8 @@
     <div class="header">
         <img src="{% static 'images/cvsuheader.png' %}" alt="CvSU Logo">
     </div>
-    <h1>Summary List of SET Ratings for AY {{academic_year}} - {{semester}} </h1>
+    <h1>Individual Summary List of Peer-to-Peer Ratings for AY {{academic_year}} - {{semester}} </h1>
+    <h1>Name of Faculty: {{faculty_name}}</h1>
     <h2>Part I: General Evaluation of the Faculty</h2> 
     <table>
         <thead>
