--- a/Feedbacksystem/templates/pages/sections.html
+++ b/Feedbacksystem/templates/pages/sections.html
@@ -47,7 +47,7 @@
       
         <!-- Custom button to trigger file selection -->
         <button type="button" class="btn custom-btn" onclick="document.getElementById('fileInput').click();">
-            Import Subjects and Faculty
+            <i class="bi bi-file-arrow-up me-2"></i> Import Subjects and Faculty
         </button>
       </div>
 </div>
