--- a/Feedbacksystem/templates/pages/users.html
+++ b/Feedbacksystem/templates/pages/users.html
@@ -32,7 +32,7 @@
 <div class="row">
     <div class="col-lg-5 col-md-3">
         <button type="button" class="btn btn-warning custom-btn mb-2" data-bs-toggle="modal" data-bs-target="#filterModal">
-            <i class="bi bi-pencil-square"></i> <b>Filter Options</b>
+            <i class="bi bi-funnel-fill"></i> Filter Options
         </button>
     </div>
 
