--- a/Feedbacksystem/templates/pages/admin_faculty_evaluations_sections_view_forms.html
+++ b/Feedbacksystem/templates/pages/admin_faculty_evaluations_sections_view_forms.html
@@ -6,6 +6,14 @@
 <div class="row">
   <div class="col-md-6">
     <h2>Faculty Evaluations for {{ selected_section.name }} </h2>
+    <p style="margin: 0; padding: 0;"> Showing data from A.Y. {{request.GET.academic_year|default:current_academic_year}} 
+      {% if request.GET.semester %}
+      <!-- Semester is explicitly provided -->
+      {{ request.GET.semester }}
+      {% else %}
+          <!-- No semester provided; default to current semester -->
+          {{ current_semester }}
+      {% endif %} </p>
   </div>
   <div class="col-lg-5 col-md-5 mt-1 evaluations_search" style="margin-left: auto;">
     <form method="get" action="" class="d-flex" style="gap: 1em;">
@@ -55,7 +63,7 @@
   <!-- Filter Options Button -->
   <div class="col-lg-2 col-md-3 col-sm-4 col-12 mb-1">
     <button type="button" class="btn btn-warning custom-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-      <i class="bi bi-pencil-square"></i> <b>Filter Options</b>
+      <i class="bi bi-funnel-fill"></i> Filter Options
     </button>
   </div>
   
@@ -72,34 +80,54 @@
 
   <!-- Search Form and Export Button -->
   <div class="col-lg-2 col-md-2 mb-1">
-    <a href="{% url 'evaluations_csv' %}?{{ request.GET.urlencode }}" class="btn btn-primary">Export to CSV</a>
+    <a href="{% url 'evaluations_csv' %}?{{ request.GET.urlencode }}" class="btn custom-btn"><i class="bi bi-file-earmark-excel-fill"></i> Export Data</a>
   </div>
 
 </div>
   <div class="table-responsive mt-2 evaluations_table">
     <table class="table table-bordered ">
         <tr>
+          <th scope="col">#</th>
           <th scope="col">Subject</th>
           <th scope="col">Faculty</th>
           <th scope="col">Average</th>
           <th scope="col">Rating</th>
           <th scope="col">Overall Impression</th>
           <th scope="col">Polarity</th>
-          <th scope="col">Academic Year</th>
-          <th scope="col">Semester</th>
           <th scope="col">Options</th>
           
         </tr>
         {% for i in page_obj.object_list %}
         <tr>
+            <td>{{ forloop.counter|add:page_obj.start_index|add:"-1" }}</td>
             <td>{{ i.section_subject_faculty.subjects }} </td>
             <td>{{ i.section_subject_faculty.faculty }}</td>
-            <td>{{ i.average_rating }}</td>
-            <td>{{ i.get_rating_category }}</td>
+            <td>
+              <span {% if i.average_rating >= 5.0 %} style="color: #339933;" 
+              {% elif i.average_rating >= 4.0 %} style="color: #66CC66;" 
+              {% elif i.average_rating >= 3.0 %} style="color: #F0C808;" 
+              {% elif i.average_rating >= 2.0 %} style="color: #FF9900;" 
+              {% elif i.average_rating >= 1.0 %} style="color: #cc0000;" 
+              {% endif %} > <b>{{ i.average_rating }} </b>
+              </span>
+            </td>
+            <td>
+            <span {% if i.average_rating >= 5.0 %} style="color: #339933;" 
+            {% elif i.average_rating >= 4.0 %} style="color: #66CC66;" 
+            {% elif i.average_rating >= 3.0 %} style="color: #F0C808;" 
+            {% elif i.average_rating >= 2.0 %} style="color: #FF9900;" 
+            {% elif i.average_rating >= 1.0 %} style="color: #cc0000;" 
+            {% endif %}>
+            <b>{{ i.get_rating_category }}</b></span>
+           </td>
             <td>{{ i.comments|truncatechars:50 }}</td>
-            <td>{{ i.predicted_sentiment }}</td>
-            <td>{{ i.academic_year }}</td>
-            <td>{{ i.semester }}</td>
+            <td>
+              <span {% if i.predicted_sentiment == 'Positive'%} style="color: #339933;" 
+                  {% elif i.predicted_sentiment == 'Negative' %} style="color:  #cc0000;" 
+                  {% endif %}>
+              <b>{{ i.predicted_sentiment }}</b>
+                </span>
+            </td>
             <td style="display: flex; flex-direction: row; align-items: center; height: 100px;" class="options_column">
 
               <a href="{% url 'admin_view_evaluation_form' i.pk %}" style="margin-right: 10px; text-decoration: none;">
