--- a/Feedbacksystem/templates/pages/admin_view_stakeholder_form.html
+++ b/Feedbacksystem/templates/pages/admin_view_stakeholder_form.html
@@ -154,6 +154,7 @@
                             }]
                         },
                         options: {
+                            indexAxis: 'y',
                             scales: {
                                
                                 y: {
